# flask-smorest-crud

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  COPILOT_REVIEW_RESOLUTION.md  README.md  SUMMARY_extend_existing_auto_inject.md  pyproject.toml
.github/: AGENTS.md
.github/agents/: Architect.agent.md  jrcoder.agent.md  reviewer.agent.md  srcoder.agent.md
.github/workflows/: ci-cd.yml  pre-commit.yml
docs/: DOCS_ROADMAP.md  IMPLEMENTATION_SUMMARY.md  MIXIN_COMPARISON.md  USER_OWNERSHIP_MIXIN.md  api.rst  conf.py  configuration.rst  crud.rst  getting-started.rst  index.rst  permissions.rst  requirements.txt  user-extension-guide.md  user-models.rst
docs/_autosummary/: flask_more_smorest.blueprint_operationid.rst  flask_more_smorest.crud.blueprint_operationid.rst  flask_more_smorest.crud.crud_blueprint.rst  flask_more_smorest.crud.pagination.rst  flask_more_smorest.crud.query_filtering.rst  flask_more_smorest.crud.rst  flask_more_smorest.error.error_handlers.rst  flask_more_smorest.error.exceptions.rst  flask_more_smorest.error.rst  flask_more_smorest.pagination.rst  flask_more_smorest.perms.api.rst  flask_more_smorest.perms.base_perms_model.rst  flask_more_smorest.perms.jwt.rst  flask_more_smorest.perms.model_mixins.rst  flask_more_smorest.perms.perms_blueprint.rst  flask_more_smorest.perms.rst  flask_more_smorest.perms.user_blueprints.rst  flask_more_smorest.perms.user_models.rst  flask_more_smorest.perms.user_schemas.rst  flask_more_smorest.rst  flask_more_smorest.sqla.base_model.rst  flask_more_smorest.sqla.database.rst  flask_more_smorest.sqla.db.rst  flask_more_smorest.sqla.migrations.rst  flask_more_smorest.sqla.rst  flask_more_smorest.utils.rst
examples/: README.md  advanced_example.py  basic_example.py
flask_more_smorest/: __init__.py  blueprint_operationid.py
flask_more_smorest/crud/: __init__.py  blueprint_operationid.py  crud_blueprint.py  pagination.py  query_filtering.py
flask_more_smorest/error/: error_handlers.py  exceptions.py
flask_more_smorest/perms/: __init__.py  api.py  base_perms_model.py  jwt.py  model_mixins.py  perms_blueprint.py  user_blueprints.py  user_models.py  user_schemas.py
flask_more_smorest/sqla/: __init__.py  base_model.py  database.py  migrations.py
scripts/: bump_version.sh  install-osx-utilities.sh
src/: crud_blueprint.py  enhanced_blueprint.py  query_filtering.py  utils.py
src/flask_more_smorest/: __init__.py  crud_blueprint.py  enhanced_blueprint.py
src/flask_smorest_crud/: __init__.py  query_filtering.py  utils.py
tests/: conftest.py  test_crud_blueprint.py  test_enhanced_blueprint.py  test_query_filtering.py  test_user.py  test_user_customization.py  test_user_extension.py  test_utils.py
tests/integration/: test_crud_integration.py  test_maximal_app.py  test_sqla_integration.py  test_user_customization.py  test_user_perms.py
tests/unit/: conftest.py  test_base_model_session.py  test_blueprint_operationid.py  test_crud_blueprint.py  test_crud_methods_logic.py  test_exceptions.py  test_health_endpoint.py  test_jwt_validation.py  test_pagination.py  test_performance_monitoring.py  test_perms_model.py  test_query_filtering.py  test_rfc7807_errors.py  test_schema_preload.py  test_schema_resolver.py  test_user_backref_name.py  test_user_blueprint.py  test_user_model_schema.py  test_utils.py  test_version.py
