[tool.poetry]
name = "flask-smorest-crud"
version = "0.0.1"
description = ""
authors = ["Dave <david@qualisero.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4"
flask = "^3.0.0"
sqlalchemy = "^2.0.25"
flask-smorest = "*"
flask-sqlalchemy = "^3.1.1"
marshmallow-sqlalchemy = "^1.4.2"

[tool.poetry.group.dev.dependencies]
flake8-pyproject = "^1.2.3"
black = "^25.1.0"
pytest = "^8.4.1"
pytest-cov = "^6.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 120
select = "C,E,F,W,B,B950"
extend-ignore = "E203, E501, E704"

[tool.black]
line-length = 120