[tool.poetry]
name = "flask-more-smorest"
version = "0.2.1"
description = "Enhanced Flask-Smorest blueprints with automatic CRUD operations"
authors = ["Dave <david@qualisero.com>"]
maintainers = ["Dave <david@qualisero.com>"]
readme = "README.md"
homepage = "https://github.com/qualisero/flask-more-smorest"
repository = "https://github.com/qualisero/flask-more-smorest"
documentation = "https://github.com/qualisero/flask-more-smorest#readme"
keywords = ["flask", "api", "rest", "crud", "smorest", "blueprint", "sqlalchemy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Flask",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Database :: Database Engines/Servers",
]
packages = [{include = "flask_more_smorest"}]
include = [
    "LICENSE",
    "CHANGELOG.md",
    "CONTRIBUTING.md",
]
exclude = ["tests", "docs", "examples"]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
flask = "^3.0.0"
sqlalchemy = "^2.0.25"
flask-smorest = "*"
flask-sqlalchemy = "^3.1.1"
marshmallow-sqlalchemy = "^1.4.2"
marshmallow = "^3.20.0"
flask-jwt-extended = "^4.6.0"
bcrypt = "^4.1.0"
werkzeug = "^3.0.0"
alembic = "^1.13.0"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^8.4.1"
pytest-cov = "^6.1.1"
pytest-mock = "^3.12.0"
pytest-xdist = "^3.5.0"

# Code Quality
black = "^25.1.0"
flake8 = "^7.0.0"
flake8-pyproject = "^1.2.3"
isort = "^5.13.2"
bandit = "^1.7.5"

# Development Tools
pre-commit = "^3.6.0"
tox = "^4.11.4"

# Documentation
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"
myst-parser = "^2.0.0"
mypy = "^1.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
# addopts = "-ra -q --strict-markers --cov=flask_more_smorest --cov-report=term-missing --cov-report=html"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["flask_more_smorest"]
omit = [
    "tests/*",
    "*/conftest.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "if TYPE_CHECKING:",
]

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.flake8]
max-line-length = 120
select = ["C", "E", "F", "W", "B", "B950"]
extend-ignore = ["E203", "E501", "E704", "W503"]
per-file-ignores = [
    "__init__.py:F401",
    "tests/*:S101,S105,S106,S107",
]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".tox",
    ".venv",
    "*.egg-info",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
disable_error_code = ["untyped-decorator"]


[[tool.mypy.overrides]]
module = [
    "flask_smorest.*",
    "marshmallow_sqlalchemy.*",
]
ignore_missing_imports = true

# Looser rules for tests: allow untyped defs by default and tolerate missing imports
[[tool.mypy.overrides]]
module = [
    "tests.*",
]
ignore_missing_imports = true
check_untyped_defs = false

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B601"]

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = py311,py312,lint,mypy,security

[testenv]
deps = pytest
commands = pytest {posargs}

[testenv:lint]
deps = 
    black
    flake8
    flake8-pyproject
    isort
commands = 
    black --check flask_more_smorest tests
    isort --check-only flask_more_smorest tests  
    flake8 flask_more_smorest tests

[testenv:mypy]
deps = mypy
commands = mypy flask_more_smorest

[testenv:security]
deps = bandit
commands = bandit -r flask_more_smorest

[testenv:coverage]
deps = 
    pytest
    pytest-cov
commands = pytest --cov=flask_more_smorest --cov-report=term-missing --cov-report=html
"""