[tool.poetry]
name = "flask-more-smorest"
version = "0.2.4"
description = "Enhanced Flask-Smorest blueprints with automatic CRUD operations"
authors = ["Dave <david@qualisero.com>"]
maintainers = ["Dave <david@qualisero.com>"]
readme = "README.md"
homepage = "https://github.com/qualisero/flask-more-smorest"
repository = "https://github.com/qualisero/flask-more-smorest"
documentation = "https://github.com/qualisero/flask-more-smorest#readme"
keywords = ["flask", "api", "rest", "crud", "smorest", "blueprint", "sqlalchemy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Flask",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Database :: Database Engines/Servers",
]
packages = [{include = "flask_more_smorest"}]
include = [
    "LICENSE",
    "CHANGELOG.md",
    "CONTRIBUTING.md",
]
exclude = ["tests", "docs", "examples"]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
flask = "^3.0.0"
sqlalchemy = "^2.0.25"
flask-smorest = "*"
flask-sqlalchemy = "^3.1.1"
marshmallow-sqlalchemy = "^1.4.2"
marshmallow = "^3.20.0"
flask-jwt-extended = "^4.6.0"
bcrypt = "^4.1.0"
werkzeug = "^3.0.0"
alembic = "^1.13.0"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^8.4.1"
pytest-cov = "^6.1.1"
pytest-mock = "^3.12.0"
pytest-xdist = "^3.5.0"

# Code Quality (ruff replaces black, isort, and flake8)
ruff = "^0.8.5"
mypy = "^1.19.0"
bandit = "^1.7.5"

# Development Tools
pre-commit = "^3.6.0"
tox = "^4.11.4"

# Documentation
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"
myst-parser = "^2.0.0"
sphinx-autodoc-typehints = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
# addopts = "-ra -q --strict-markers --cov=flask_more_smorest --cov-report=term-missing --cov-report=html"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["flask_more_smorest"]
omit = [
    "tests/*",
    "*/conftest.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "if TYPE_CHECKING:",
]

# Ruff replaces black, isort, and flake8
[tool.ruff]
line-length = 120
target-version = "py311"

# Enable formatting (black replacement)
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# Enable linting (flake8 + isort replacement)
[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort (import sorting)
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C",     # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "C408",  # unnecessary dict() call (dict() is sometimes clearer)
    "C901",  # function is too complex (some complexity is acceptable)
    "N805",  # first argument of method should be named 'self' (cls is fine for classmethods/metaclasses)
    "N806",  # variable in function should be lowercase (OK for dynamically created classes)
    "N818",  # exception name should end with Error (ApiException is fine)
    "B006",  # do not use mutable data structures for argument defaults (using list(CRUDMethod) is intentional)
    "B904",  # within except clause, use raise ... from (not always needed)
    "B017",  # pytest.raises(Exception) should be considered evil (OK in tests)
    "UP038", # use X | Y in isinstance call instead of (X, Y) (tuple form is clearer)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports OK in __init__
"tests/*" = ["S101", "S105", "S106", "S107"]  # Allow asserts, hardcoded passwords in tests

# Configure import sorting (isort replacement)
[tool.ruff.lint.isort]
known-first-party = ["flask_more_smorest"]
force-single-line = false
split-on-trailing-comma = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
disable_error_code = ["untyped-decorator"]


[[tool.mypy.overrides]]
module = [
    "flask_smorest.*",
    "marshmallow_sqlalchemy.*",
]
ignore_missing_imports = true

# Looser rules for tests: allow untyped defs and tolerate missing imports
[[tool.mypy.overrides]]
module = "tests.*"
ignore_missing_imports = true
check_untyped_defs = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
warn_return_any = false
warn_unused_ignores = false

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B601"]

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = py311,py312,lint,mypy,security

[testenv]
deps = pytest
commands = pytest {posargs}

[testenv:lint]
deps = ruff
commands = 
    ruff format --check flask_more_smorest tests
    ruff check flask_more_smorest tests

[testenv:mypy]
deps = mypy
commands = mypy flask_more_smorest

[testenv:security]
deps = bandit
commands = bandit -r flask_more_smorest

[testenv:coverage]
deps = 
    pytest
    pytest-cov
commands = pytest --cov=flask_more_smorest --cov-report=term-missing --cov-report=html
"""